align titles, fixed low quality img logo

--- a/app/pages/Hero/AnimationTitileSection/style.scss
+++ b/app/pages/Hero/AnimationTitileSection/style.scss
@@ -195,8 +195,8 @@
         .logo-img {
           display: block;
           margin-bottom: 32px;
-          width: 100%;
-          max-width: 300px;
+          // width: 100%;
+          // max-width: 300px;
         }
       }
     }
@@ -250,8 +250,8 @@
         .logo-img {
           display: block;
           margin-bottom: 32px;
-          width: 100%;
-          max-width: 200px;
+          // width: 100%;
+          // max-width: 200px;
         }
       }
     }
