--- a/app/pages/Hero/FAQSection/style.scss
+++ b/app/pages/Hero/FAQSection/style.scss
@@ -26,6 +26,7 @@
         font-size: 40px;
         line-height: 55.2px;
         margin-bottom: 20px;
+        text-align: center;
       }
     }
   }
