--- a/app/pages/Hero/PortfolioSection/style.scss
+++ b/app/pages/Hero/PortfolioSection/style.scss
@@ -27,6 +27,7 @@
       font-weight: 600;
       line-height: 55.2px;
       margin-bottom: 48px;
+      text-align: center;
     }
 
     .mobile-button-wrapper {
